Refactor utility classes